Set correct data & labels for the charts

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
         <div class="card">
           <div class="card-body">
             <canvas id="chart1" class="card-img-top"></canvas>
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Wykres przedstawia najwyższe i najniższe wartości tynkowe piłkarzy
+              w pożądanych krajach.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -33,12 +32,11 @@
         <div class="card">
           <div class="card-body">
             <canvas id="chart2" class="card-img-top"></canvas>
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Wykres przedstawia liczbę goli oddanych przez wybrane kraje na
+              przestrzeni podanych lat.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -49,6 +47,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
