--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <canvas id="chart1" class="card-img-top"></canvas>
             <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
             <p class="card-text">
-              Wykres przedstawia najwyższe i najniższe wartości tynkowe piłkarzy
-              w pożądanych krajach.
+              Wykres przedstawia najwyższe i najniższe wartości rynkowe piłkarzy
+              w poszczególnych krajach.
             </p>
           </div>
         </div>
@@ -34,8 +34,8 @@
             <canvas id="chart2" class="card-img-top"></canvas>
             <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
             <p class="card-text">
-              Wykres przedstawia liczbę goli oddanych przez wybrane kraje na
-              przestrzeni podanych lat.
+              Wykres przedstawia liczbę goli oddanych przez poszczególne kraje
+              na przestrzeni ostatnich lat.
             </p>
           </div>
         </div>
