Fix inccorect styles for charts section

--- a/index.html
+++ b/index.html
@@ -15,28 +15,33 @@
   </head>
   <body>
     <h1>EDI Final Group Project</h1>
-    <section class="row row-cols-1 row-cols-md-2 g-5 px-5" id="charty">
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <canvas id="chart1" class="card-img-top"></canvas>
-            <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
-            <p class="card-text">
-              Wykres przedstawia najwyższe i najniższe wartości rynkowe piłkarzy
-              w poszczególnych krajach.
-            </p>
+    <section
+      class="d-flex align-items-center vh-100 overflow-hidden"
+      id="charty"
+    >
+      <div class="row row-cols-1 row-cols-md-2 g-5 px-5">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <canvas id="chart1" class="card-img-top"></canvas>
+              <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
+              <p class="card-text">
+                Wykres przedstawia najwyższe i najniższe wartości rynkowe
+                piłkarzy w poszczególnych krajach.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <div class="card-body">
-            <canvas id="chart2" class="card-img-top"></canvas>
-            <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
-            <p class="card-text">
-              Wykres przedstawia liczbę goli oddanych przez poszczególne kraje
-              na przestrzeni ostatnich lat.
-            </p>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <canvas id="chart2" class="card-img-top"></canvas>
+              <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
+              <p class="card-text">
+                Wykres przedstawia liczbę goli oddanych przez poszczególne kraje
+                na przestrzeni ostatnich lat.
+              </p>
+            </div>
           </div>
         </div>
       </div>
