--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
       crossorigin="anonymous"
     ></script>
     <script src="main.js"></script>
+   
+      <div id="spinner" class="d-flex justify-content-center">
+        <div class="spinner-border" role="status">
+        </div>
+      </div>
+
+    <table class="table table-striped table-dark">
+        <thead>
+          <tr id="table_headers">
+          </tr>
+        </thead>
+        <tbody id="table_body">
+        </tbody>
+      </table>
   </body>
 </html>
