Fix layout structure

--- a/about_us.html
+++ b/about_us.html
@@ -21,64 +21,71 @@
     <link href="main.css" rel="stylesheet" />
   </head>
   <body>
-    <div
-      id="main"
-      class="container-fluid d-flex flex-column justify-content-start align-items-center"
-    >
-      <p class="h1 p-5">Our Team</p>
-      <div
-        id="cards"
-        class="container-fluid d-flex align-items-center justify-content-evenly flex-wrap m-5"
-      >
-        <div class="card-box p-5">
-          <div class="card-image">
-            <img src="./imgs/jagoda.png" alt="Jagoda Wągiel" />
-          </div>
-          <div class="card-title text-center pt-3">
-            <p class="h2">Jagoda Wągiel</p>
-          </div>
-          <div
-            class="card-role-box d-flex align-items-center justify-content-center"
-          >
-            <div
-              class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-            ></div>
-            <div class="card-role-text text-center position-absolute">ROLA</div>
-          </div>
+    <div id="main" class="container text-center">
+      <div class="row">
+        <div class="col">
+          <p class="h1 p-5">Our Team</p>
         </div>
-        <div id="special" class="card-box p-5">
-          <div class="card-image">
-            <img src="./imgs/wiktor.png" alt="Jagoda Wągiel" />
-          </div>
-          <div class="card-title text-center pt-3">
-            <p class="h2">Wiktor Trybulec</p>
-          </div>
-          <div
-            class="card-role-box d-flex align-items-center justify-content-center"
-          >
+      </div>
+      <div class="row h-75">
+        <div
+          id="cards"
+          class="container d-flex align-items-center justify-content-evenly flex-wrap"
+        >
+          <div class="card-box p-5 col m-3">
+            <div class="card-image">
+              <img src="./imgs/jagoda.png" alt="Jagoda Wągiel" />
+            </div>
+            <div class="card-title text-center pt-3">
+              <p class="h2">Jagoda Wągiel</p>
+            </div>
             <div
-              class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-              style="min-width: 150px"
-            ></div>
-            <div class="card-role-text text-center position-absolute">
-              TEAM LEADER
+              class="card-role-box d-flex align-items-center justify-content-center"
+            >
+              <div
+                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
+              ></div>
+              <div class="card-role-text text-center position-absolute">
+                ROLA
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card-box p-5">
-          <div class="card-image">
-            <img src="./imgs/michal.png" alt="Jagoda Wągiel" />
-          </div>
-          <div class="card-title text-center pt-3">
-            <p class="h2">Michał Woś</p>
-          </div>
-          <div
-            class="card-role-box d-flex align-items-center justify-content-center"
-          >
+          <div class="card-box p-5 col m-3">
+            <div class="card-image">
+              <img src="./imgs/wiktor.png" alt="Jagoda Wągiel" />
+            </div>
+            <div class="card-title text-center pt-3">
+              <p class="h2">Wiktor Trybulec</p>
+            </div>
             <div
-              class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-            ></div>
-            <div class="card-role-text text-center position-absolute">ROLA</div>
+              class="card-role-box d-flex align-items-center justify-content-center"
+            >
+              <div
+                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
+                style="min-width: 150px"
+              ></div>
+              <div class="card-role-text text-center position-absolute">
+                TEAM LEADER
+              </div>
+            </div>
+          </div>
+          <div class="card-box p-5 col m-3">
+            <div class="card-image">
+              <img src="./imgs/michal.png" alt="Jagoda Wągiel" />
+            </div>
+            <div class="card-title text-center pt-3">
+              <p class="h2">Michał Woś</p>
+            </div>
+            <div
+              class="card-role-box d-flex align-items-center justify-content-center"
+            >
+              <div
+                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
+              ></div>
+              <div class="card-role-text text-center position-absolute">
+                ROLA
+              </div>
+            </div>
           </div>
         </div>
       </div>
