New About Us structure

--- a/about_us.html
+++ b/about_us.html
@@ -24,7 +24,7 @@
     <div id="main" class="container text-center">
       <div class="row">
         <div class="col">
-          <p class="h1 p-5">Our Team</p>
+          <p class="h1 p-5">About Us</p>
         </div>
       </div>
       <div class="row h-75">
@@ -32,7 +32,9 @@
           id="cards"
           class="container d-flex align-items-center justify-content-evenly flex-wrap"
         >
-          <div class="card-box p-5 col m-3">
+          <div
+            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
+          >
             <div class="card-image">
               <img src="./imgs/jagoda.png" alt="Jagoda Wągiel" />
             </div>
@@ -44,13 +46,16 @@
             >
               <div
                 class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
+                style="min-width: 150px"
               ></div>
               <div class="card-role-text text-center position-absolute">
-                ROLA
+                DEVELOPER
               </div>
             </div>
           </div>
-          <div class="card-box p-5 col m-3">
+          <div
+            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
+          >
             <div class="card-image">
               <img src="./imgs/wiktor.png" alt="Jagoda Wągiel" />
             </div>
@@ -69,7 +74,9 @@
               </div>
             </div>
           </div>
-          <div class="card-box p-5 col m-3">
+          <div
+            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
+          >
             <div class="card-image">
               <img src="./imgs/michal.png" alt="Jagoda Wągiel" />
             </div>
@@ -81,9 +88,10 @@
             >
               <div
                 class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
+                style="min-width: 150px"
               ></div>
               <div class="card-role-text text-center position-absolute">
-                ROLA
+                DEVELOPER
               </div>
             </div>
           </div>
