--- a/index.html
+++ b/index.html
@@ -14,17 +14,76 @@
     <link href="main.css" rel="stylesheet" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top px-3">
+      <a class="navbar-brand" href="#">EDI Project</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about_us.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#charty">Charts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#spinner">Table</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <h1>EDI Final Group Project</h1>
+    <section
+      class="d-flex align-items-center vh-100 overflow-hidden"
+      id="charty"
+    >
+      <div class="row row-cols-1 row-cols-md-2 g-5 px-5">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <canvas id="chart1" class="card-img-top"></canvas>
+              <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
+              <p class="card-text">
+                Wykres przedstawia najwyższe i najniższe wartości rynkowe
+                piłkarzy w poszczególnych krajach.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <canvas id="chart2" class="card-img-top"></canvas>
+              <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
+              <p class="card-text">
+                Wykres przedstawia liczbę goli oddanych przez poszczególne kraje
+                na przestrzeni ostatnich lat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
