--- a/index.html
+++ b/index.html
@@ -55,23 +55,21 @@
       src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
       crossorigin="anonymous"
-    ></script> 
+    ></script>
 
-
-   
-      <div id="spinner" class="d-flex justify-content-center">
-        <div class="spinner-border" role="status">
-        </div>
+    <section class="d-flex justify-content-center" id="tables">
+      <div id="spinner" class="">
+        <div class="spinner-border" role="status"></div>
       </div>
-
-    <table class="table table-striped table-dark">
-        <thead>
-          <tr id="table_headers">
-          </tr>
-        </thead>
-        <tbody id="table_body">
-        </tbody>
-      </table>
+      <div>
+        <table class="table table-striped table-dark">
+          <thead>
+            <tr id="table_headers"></tr>
+          </thead>
+          <tbody id="table_body"></tbody>
+        </table>
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js" type="module"></script>
