--- a/about_us.html
+++ b/about_us.html
@@ -57,7 +57,7 @@
             class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
           >
             <div class="card-image">
-              <img src="./imgs/wiktor.png" alt="Jagoda Wągiel" />
+              <img src="./imgs/wiktor.png" alt="Wiktor Trybulec" />
             </div>
             <div class="card-title text-center pt-3">
               <p class="h2">Wiktor Trybulec</p>
@@ -78,7 +78,7 @@
             class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
           >
             <div class="card-image">
-              <img src="./imgs/michal.png" alt="Jagoda Wągiel" />
+              <img src="./imgs/michal.png" alt="Michał Woś" />
             </div>
             <div class="card-title text-center pt-3">
               <p class="h2">Michał Woś</p>
