--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>EDI Final Group Project</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -14,78 +14,70 @@
     <link href="main.css" rel="stylesheet" />
   </head>
   <body>
-    <section class="container col-xxl-8 px-4 py-5" id="opis">
+    <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Final Project - EDI</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about_us.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#charty">Charts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#spinner">Table</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section
+      class="d-flex align-items-center container col-xxl-8 px-4 py-5 min-vh-100"
+      id="opis"
+    >
       <div class="row flex-lg-row-reverse align-items-center g-5">
-        <div class="col-10 col-sm-8 col-lg-6">
+        <div class="col-12 col-md-6 col-lg-6">
           <img
             src="imgs/hero.jpg"
-            class="d-block mx-lg-auto img-fluid"
+            class="d-block mx-lg-auto img-fluid rounded"
             alt="Bootstrap Themes"
             width="700"
             height="500"
             loading="lazy"
           />
         </div>
-        <div class="col-lg-6">
+        <div class="col-12 col-md-6 col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Responsive left-aligned hero with image
+            Final Project - Elektroniczna wymiana danych
           </h1>
           <p class="lead">
             Quickly design and customize responsive mobile-first sites with
-            Bootstrap, the world’s most popular front-end open source toolkit,
+            Bootstrap, the worlds most popular front-end open source toolkit,
             featuring Sass variables and mixins, responsive grid system,
             extensive prebuilt components, and powerful JavaScript plugins.
           </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
-              Primary
-            </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-              Default
-            </button>
-          </div>
         </div>
       </div>
     </section>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top px-3">
-      <a class="navbar-brand" href="#">EDI Project</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
+    <section class="d-flex align-items-center py-5 min-vh-100" id="charty">
+      <div
+        class="row row-cols-1 row-cols-md-2 g-4 g-lg-5 px-2 px-lg-5 max-vw-100"
       >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about_us.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#charty">Charts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#spinner">Table</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <h1>EDI Final Group Project</h1>
-    <section
-      class="d-flex align-items-center vh-100 overflow-hidden"
-      id="charty"
-    >
-      <div class="row row-cols-1 row-cols-md-2 g-5 px-5">
         <div class="col">
           <div class="card">
             <div class="card-body">
@@ -112,47 +104,59 @@
         </div>
       </div>
     </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-    <section class="d-flex justify-content-center" id="tables">
-      <div id="spinner" class="">
+    <section
+      class="d-flex-column align-items-center py-5 min-vh-100 table-responsive-md"
+      id="tables"
+    >
+      <div
+        id="spinner"
+        class="position-absolute d-flex justify-content-center min-vw-100"
+      >
         <div class="spinner-border" role="status"></div>
       </div>
-      <div>
-        <table class="table table-striped table-dark">
-          <thead>
-            <tr id="table_headers"></tr>
-          </thead>
-          <tbody id="table_body"></tbody>
-        </table>
+      <table class="table table-striped mx-5">
+        <thead>
+          <tr id="table_headers"></tr>
+        </thead>
+        <tbody id="table_body"></tbody>
+      </table>
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-link" id="showMoreData">
+          Pokaż więcej danych...
+        </button>
       </div>
     </section>
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 px-4 my-4 border-top"
+    >
+      <p class="col-md-4 mb-0 text-muted">&copy; 2023 EDI Project</p>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/about_us.html" class="nav-link px-2 text-muted">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="#charty" class="nav-link px-2 text-muted">Charts</a>
+        </li>
+        <li class="nav-item">
+          <a href="#spinner" class="nav-link px-2 text-muted">Table</a>
+        </li>
+      </ul>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js" type="module"></script>
-    <div class="container">
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
-      >
-        <p class="col-md-4 mb-0 text-muted">&copy; 2022 EDI Project</p>
-
-        <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-muted">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="/about_us.html" class="nav-link px-2 text-muted">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#charty" class="nav-link px-2 text-muted">Charts</a>
-          </li>
-          <li class="nav-item">
-            <a href="#spinner" class="nav-link px-2 text-muted">Table</a>
-          </li>
-        </ul>
-      </footer>
-    </div>
   </body>
 </html>
