--- a/about_us.html
+++ b/about_us.html
@@ -5,99 +5,160 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Team</title>
-    <link rel="stylesheet" href="./about_us.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link href="main.css" rel="stylesheet" />
+    <link href="about_us.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="main" class="container text-center">
-      <div class="row">
-        <div class="col">
-          <p class="h1 p-5">About Us</p>
-        </div>
-      </div>
-      <div class="row h-75">
-        <div
-          id="cards"
-          class="container d-flex align-items-center justify-content-evenly flex-wrap"
+    <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Final Project - EDI</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
-          <div
-            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
-          >
-            <div class="card-image">
-              <img src="./imgs/jagoda.png" alt="Jagoda Wągiel" />
-            </div>
-            <div class="card-title text-center pt-3">
-              <p class="h2">Jagoda Wągiel</p>
-            </div>
-            <div
-              class="card-role-box d-flex align-items-center justify-content-center"
-            >
-              <div
-                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-                style="min-width: 150px"
-              ></div>
-              <div class="card-role-text text-center position-absolute">
-                DEVELOPER
-              </div>
-            </div>
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html#charty">Charts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/index.html#spinner">Table</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="row row-cols-1 row-cols-md-3 g-4 px-4 py-5">
+      <div class="col">
+        <div class="card">
+          <img
+            src="./imgs/jagoda.png"
+            class="card-img-top px-2 py-3 mx-auto w-50"
+            alt="Jagoda Wągiel"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Jagoda Wągiel</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
           </div>
-          <div
-            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
-          >
-            <div class="card-image">
-              <img src="./imgs/wiktor.png" alt="Wiktor Trybulec" />
-            </div>
-            <div class="card-title text-center pt-3">
-              <p class="h2">Wiktor Trybulec</p>
-            </div>
-            <div
-              class="card-role-box d-flex align-items-center justify-content-center"
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
+          <div class="card-body">
+            <a
+              href="https://github.com/dontmentio"
+              target="_blank"
+              class="card-link"
+              >GitHub</a
             >
-              <div
-                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-                style="min-width: 150px"
-              ></div>
-              <div class="card-role-text text-center position-absolute">
-                TEAM LEADER
-              </div>
-            </div>
-          </div>
-          <div
-            class="card-box p-5 col m-3 d-flex align-items-center flex-column justify-content-center"
-          >
-            <div class="card-image">
-              <img src="./imgs/michal.png" alt="Michał Woś" />
-            </div>
-            <div class="card-title text-center pt-3">
-              <p class="h2">Michał Woś</p>
-            </div>
-            <div
-              class="card-role-box d-flex align-items-center justify-content-center"
-            >
-              <div
-                class="card-role p-3 rounded opacity-50 d-flex align-items-center justify-content-center position-relative"
-                style="min-width: 150px"
-              ></div>
-              <div class="card-role-text text-center position-absolute">
-                DEVELOPER
-              </div>
-            </div>
           </div>
         </div>
       </div>
-    </div>
+      <div class="col">
+        <div class="card">
+          <img
+            src="./imgs/wiktor.png"
+            class="card-img-top px-2 py-3 mx-auto w-50"
+            alt="Wiktor Trybulec"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Wiktor Trybulec</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
+          <div class="card-body">
+            <a
+              href="https://github.com/wiktortr"
+              target="_blank"
+              class="card-link"
+              >GitHub</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img
+            src="./imgs/michal.png"
+            class="card-img-top px-2 py-3 mx-auto w-50"
+            alt="Michał Woś"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Michał Woś</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+          </ul>
+          <div class="card-body">
+            <a
+              href="https://github.com/TheFenix2000"
+              target="_blank"
+              class="card-link"
+              >GitHub</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 px-4 my-4 border-top"
+    >
+      <p class="col-md-4 mb-0 text-muted">&copy; 2023 EDI Project</p>
+
+      <ul class="nav col-md-4 justify-content-end">
+        <li class="nav-item">
+          <a href="/index.html" class="nav-link px-2 text-muted">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link px-2 text-muted">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="/index.html#charty" class="nav-link px-2 text-muted"
+            >Charts</a
+          >
+        </li>
+        <li class="nav-item">
+          <a href="/index.html#spinner" class="nav-link px-2 text-muted"
+            >Table</a
+          >
+        </li>
+      </ul>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
