--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
@@ -34,7 +33,7 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about_us.html">About</a>
+              <a class="nav-link" href="/about_us.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#charty">Charts</a>
