Update content of abaout us page

--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Team</title>
+    <title>About Us</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -48,7 +48,7 @@
     </nav>
     <section class="row row-cols-1 row-cols-md-3 g-4 px-4 py-5">
       <div class="col">
-        <div class="card">
+        <div class="card h-100">
           <img
             src="./imgs/jagoda.png"
             class="card-img-top px-2 py-3 mx-auto w-50"
@@ -57,27 +57,31 @@
           <div class="card-body">
             <h5 class="card-title">Jagoda Wągiel</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Pasjonatka rozwiązań technologicznych odpowiadających na potrzeby
+              związane z administracją biznesami - nie zależnie od ich wielkości
+              i obszaru działalności.
             </p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">
+              Funkcja w Teamie: Developerka i edytorka treści
+            </li>
+            <li class="list-group-item">Hobby: sporty zimowe</li>
+            <li class="list-group-item">Studiuje: Informatyka Stosowana</li>
+            <li class="list-group-item">
+              <a
+                href="https://github.com/dontmentio"
+                target="_blank"
+                class="card-link"
+              >
+                GitHub
+              </a>
+            </li>
           </ul>
-          <div class="card-body">
-            <a
-              href="https://github.com/dontmentio"
-              target="_blank"
-              class="card-link"
-              >GitHub</a
-            >
-          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card">
+        <div class="card h-100">
           <img
             src="./imgs/wiktor.png"
             class="card-img-top px-2 py-3 mx-auto w-50"
@@ -86,27 +90,31 @@
           <div class="card-body">
             <h5 class="card-title">Wiktor Trybulec</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Pasjonat programowania oraz zawodowy programista, interesuje się
+              rozwiązaniami w FinTech, wolnych chwilach gram na PS i oglądam
+              Netflixa.
             </p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">
+              Funkcja w Teamie: Developer & Leader
+            </li>
+            <li class="list-group-item">Hobby: sztuka czystego kodu</li>
+            <li class="list-group-item">Studiuje: Informatyka Stosowana</li>
+            <li class="list-group-item">
+              <a
+                href="https://github.com/wiktortr"
+                target="_blank"
+                class="card-link"
+              >
+                GitHub
+              </a>
+            </li>
           </ul>
-          <div class="card-body">
-            <a
-              href="https://github.com/wiktortr"
-              target="_blank"
-              class="card-link"
-              >GitHub</a
-            >
-          </div>
         </div>
       </div>
       <div class="col">
-        <div class="card">
+        <div class="card h-100">
           <img
             src="./imgs/michal.png"
             class="card-img-top px-2 py-3 mx-auto w-50"
@@ -115,23 +123,24 @@
           <div class="card-body">
             <h5 class="card-title">Michał Woś</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Kinomaniak oraz niedzielny gracz, w wolnych chwilach rozpoczyna
+              ciągle nowe projekty zamiast dokończyć stare.
             </p>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">Funkcja w Teamie: Developer</li>
+            <li class="list-group-item">Hobby: filmy i seriale</li>
+            <li class="list-group-item">Studiuje: Informatyka Stosowana</li>
+            <li class="list-group-item">
+              <a
+                href="https://github.com/TheFenix2000"
+                target="_blank"
+                class="card-link"
+              >
+                GitHub
+              </a>
+            </li>
           </ul>
-          <div class="card-body">
-            <a
-              href="https://github.com/TheFenix2000"
-              target="_blank"
-              class="card-link"
-              >GitHub</a
-            >
-          </div>
         </div>
       </div>
     </section>
