--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
@@ -65,10 +66,18 @@
             Final Project - Elektroniczna wymiana danych
           </h1>
           <p class="lead">
-            Quickly design and customize responsive mobile-first sites with
-            Bootstrap, the worlds most popular front-end open source toolkit,
-            featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.
+            Celem projektu było stworzenie strony internetowej wykorzystując
+            podstawowe technologie webowe, takie jak: HTML, JS,
+            <a href="https://getbootstrap.com" target="_blank">Bootstrap</a> i
+            <a href="https://www.chartjs.org" target="_blank">Chart.js</a>.
+            Dodatkowo dla usprawnienia pracy i komunikacji pomiędzy członkami
+            teamu, posłużyliśmy się okrojoną wersją metodologii Scrum.
+            Zachowaliśmy też wszystkie podstawowe zasady pracy w zespole
+            programistycznym, takie jak: tworzenie osobnych branch'y dla
+            pomniejszych elementów projektu czy zgłaszanie Pull Request'ów by
+            każdy członek zespołu mógł sprawdzić pracę wykonaną przez resztę,
+            nanieść komentarze i zaakceptować ostateczną wersję. Przedstawione
+            przez nas dane osadzone są w tematyce związanej z piłką nożną.
           </p>
         </div>
       </div>
