hotfix: fix not working links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about_us.html">About Us</a>
+              <a class="nav-link" href="about_us.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#charty">Charts</a>
@@ -144,7 +144,7 @@
           <a href="#" class="nav-link px-2 text-muted">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/about_us.html" class="nav-link px-2 text-muted">About Us</a>
+          <a href="about_us.html" class="nav-link px-2 text-muted">About Us</a>
         </li>
         <li class="nav-item">
           <a href="#charty" class="nav-link px-2 text-muted">Charts</a>
