--- a/about_us.html
+++ b/about_us.html
@@ -31,16 +31,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="/index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#charty">Charts</a>
+              <a class="nav-link" href="index.html#charty">Charts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/index.html#spinner">Table</a>
+              <a class="nav-link" href="index.html#spinner">Table</a>
             </li>
           </ul>
         </div>
@@ -151,18 +151,18 @@
 
       <ul class="nav col-md-4 justify-content-end">
         <li class="nav-item">
-          <a href="/index.html" class="nav-link px-2 text-muted">Home</a>
+          <a href="index.html" class="nav-link px-2 text-muted">Home</a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link px-2 text-muted">About Us</a>
         </li>
         <li class="nav-item">
-          <a href="/index.html#charty" class="nav-link px-2 text-muted"
+          <a href="index.html#charty" class="nav-link px-2 text-muted"
             >Charts</a
           >
         </li>
         <li class="nav-item">
-          <a href="/index.html#spinner" class="nav-link px-2 text-muted"
+          <a href="index.html#spinner" class="nav-link px-2 text-muted"
             >Table</a
           >
         </li>
