--- a/about_us.html
+++ b/about_us.html
@@ -58,7 +58,7 @@
             <h5 class="card-title">Jagoda Wągiel</h5>
             <p class="card-text">
               Pasjonatka rozwiązań technologicznych odpowiadających na potrzeby
-              związane z administracją biznesami - nie zależnie od ich wielkości
+              związane z administracją biznesami - niezależnie od ich wielkości
               i obszaru działalności.
             </p>
           </div>
@@ -90,14 +90,14 @@
           <div class="card-body">
             <h5 class="card-title">Wiktor Trybulec</h5>
             <p class="card-text">
-              Pasjonat programowania oraz zawodowy programista, interesuje się
-              rozwiązaniami w FinTech, wolnych chwilach gram na PS i oglądam
+              Pasjonat programowania oraz zawodowy programista. Interesuje się
+              rozwiązaniami w FinTech, a w wolnych chwilach gra na PS i ogląda
               Netflixa.
             </p>
           </div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              Funkcja w Teamie: Developer & Leader
+              Funkcja w Teamie: Developer i Leader
             </li>
             <li class="list-group-item">Hobby: sztuka czystego kodu</li>
             <li class="list-group-item">Studiuje: Informatyka Stosowana</li>
