--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             teamu, posłużyliśmy się okrojoną wersją metodologii Scrum.
             Zachowaliśmy też wszystkie podstawowe zasady pracy w zespole
             programistycznym, takie jak: tworzenie osobnych branch'y dla
-            pomniejszych elementów projektu czy zgłaszanie Pull Request'ów by
+            pomniejszych elementów projektu czy zgłaszanie Pull Request'ów, by
             każdy członek zespołu mógł sprawdzić pracę wykonaną przez resztę,
             nanieść komentarze i zaakceptować ostateczną wersję. Przedstawione
             przez nas dane osadzone są w tematyce związanej z piłką nożną.
