Fix missing project requirements

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           <h1 class="display-5 fw-bold lh-1 mb-3">
             Final Project - Elektroniczna wymiana danych
           </h1>
+          <h3>Jagoda Wągiel, Wiktor Trybulec, Michał Woś</h3>
+          <h5><a href="https://wiktortr.github.io/EDI/about_us.html">About Us</a></h5>
           <p class="lead">
             Celem projektu było stworzenie strony internetowej wykorzystując
             podstawowe technologie webowe, takie jak: HTML, JS,
