add reading dataset json from github

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             Final Project - Elektroniczna wymiana danych
           </h1>
           <h3>Jagoda Wągiel, Wiktor Trybulec, Michał Woś</h3>
-          <h5><a href="https://wiktortr.github.io/EDI/about_us.html">About Us</a></h5>
+          <h5>
+            <a href="https://wiktortr.github.io/EDI/about_us.html">About Us</a>
+          </h5>
           <p class="lead">
             Celem projektu było stworzenie strony internetowej wykorzystując
             podstawowe technologie webowe, takie jak: HTML, JS,
@@ -82,6 +84,13 @@
             przez nas dane osadzone są w tematyce związanej z piłką nożną.
           </p>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-warning" id="changeDataset">
+          Zmień dane
+        </button>
       </div>
     </section>
     <section class="d-flex align-items-center py-5 min-vh-100" id="charty">
