add 3 buttons to switch to different datasets

--- a/index.html
+++ b/index.html
@@ -88,8 +88,26 @@
     </section>
     <section>
       <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-warning" id="changeDataset">
-          Zmień dane
+        <button
+          type="button"
+          class="btn btn-warning ms-5 me-5"
+          id="changeDataset0"
+        >
+          Dane 1
+        </button>
+        <button
+          type="button"
+          class="btn btn-warning ms-5 me-5"
+          id="changeDataset1"
+        >
+          Dane 2
+        </button>
+        <button
+          type="button"
+          class="btn btn-warning ms-5 me-5"
+          id="changeDataset2"
+        >
+          Dane 3
         </button>
       </div>
     </section>
