--- a/about_us.html
+++ b/about_us.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Final Project - EDI</a>
+        <a class="navbar-brand" href="index.html">Final Project - EDI</a>
         <button
           class="navbar-toggler"
           type="button"
