--- a/index.html
+++ b/index.html
@@ -111,12 +111,15 @@
         </button>
       </div>
     </section>
-    <section class="d-flex align-items-center py-5 min-vh-100" id="charty">
+    <section
+      class="d-flex align-items-center justify-content-center py-5 min-vh-100"
+      id="charty"
+    >
       <div
         class="row row-cols-1 row-cols-md-2 g-4 g-lg-5 px-2 px-lg-5 max-vw-100"
       >
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-body">
               <canvas id="chart1" class="card-img-top"></canvas>
               <h5 class="card-title mt-2">Wartości Rynkowe Piłkarzy</h5>
@@ -128,7 +131,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-body">
               <canvas id="chart2" class="card-img-top"></canvas>
               <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
@@ -151,7 +154,7 @@
       >
         <div class="spinner-border" role="status"></div>
       </div>
-      <table class="table table-striped mx-5">
+      <table class="table table-striped">
         <thead>
           <tr id="table_headers"></tr>
         </thead>
