Revert "Task 8 - chart2 generation"

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <div class="card h-100">
             <div class="card-body">
               <canvas id="chart2" class="card-img-top"></canvas>
-              <h5 class="card-title mt-2">Liczba Goli Poszczególnych Państw</h5>
+              <h5 class="card-title mt-2">Liczba Goli na Przestrzeni Lat</h5>
               <p class="card-text">
                 Wykres przedstawia liczbę goli oddanych przez poszczególne kraje
                 na przestrzeni ostatnich lat.
